--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "node-fetch": "^3.3.2"
   }
 }
