--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "rc-slider": "^11.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pinch-zoom-pan": "^1.4.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
     "react-slick": "^0.30.2",
+    "react-zoom-pan-pinch": "^3.6.1",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
