--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "rc-slider": "^11.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-inner-image-zoom": "^3.0.2",
     "react-pinch-zoom-pan": "^1.4.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
